force-app/main/default/objects/POS_Over_Write__c/POS_Over_Write__c.object-meta.xml
<CustomObject>
    <description>This is to work with EA and when there is a TP (Reporting Partner) that provides an updated fiile, it will allow us to override a specific month but creating a File with Overwrite = true and entering month and tp code in this object, using TP Code, Sale Month and Sale year as Distinct Values (Keys)</description>
    <label>POS_Over_Write</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>POS_Over_Write Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS_Over_Writes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>