force-app/main/default/objects/POS_Over_Write__c/fields/CDWCanada__c.field-meta.xml
<CustomField>
    <fullName>CDWCanada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDWCanada</label>
    <type>Checkbox</type>
</CustomField>