force-app/main/default/objects/POS_Over_Write__c/fields/OverWrite_Month__c.field-meta.xml
<CustomField>
    <fullName>OverWrite_Month__c</fullName>
    <description>Put any day in the month that data will be ignored. For e.g. if May 2019 pick 05/01/2019 and the system will filter out data for that TP code for those dates that are not tagged as overwrite = &apos;monthly&apos;</description>
    <label>OverWrite Month</label>
    <type>Date</type>
</CustomField>