force-app/main/default/objects/POS_Over_Write__c/fields/OW_Exists__c.field-meta.xml
<CustomField>
    <fullName>OW_Exists__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OW_Exists</label>
    <type>Checkbox</type>
</CustomField>