force-app/main/default/objects/POS_Over_Write__c/fields/TP_Code__c.field-meta.xml
<CustomField>
    <fullName>TP_Code__c</fullName>
    <label>TP Code/POS Reseller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>