force-app/main/default/objects/POS_Over_Write__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TP_Code__c</columns>
    <columns>OverWrite_Month__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>